[FIX] Fix homeButton & downloadButton on mobile + add fadeIn anim

--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -34,11 +34,22 @@ img {
   object-fit: cover;
 }
 
+.homeButton {
+  z-index: 25;
+}
+
 .container {
   > .homeButton {
     position: absolute;
     top: 35px;
     left: 35px;
+  }
+
+  @media (max-width: $breakpoint-sm) {
+    > .homeButton {
+      right: 35px;
+      left: unset;
+    }
   }
 }
 
